# sja-old

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml
.github/workflows/: check.yml  compile.yml  scheduled.yml  test.yml
backend/: Cargo.toml  Dockerfile
backend/migrations/: 20240730095415_init.sql
backend/src/: main.rs
backend/src/database/: controller.rs  mod.rs  services.rs  structs.rs
backend/src/server/: mod.rs  router.rs
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.js  types.ts
frontend/src/app/: page.tsx
frontend/src/components/: CustomTable.tsx  Filter.tsx
migrations/: 20240727_init.sql
sja-app/: Cargo.toml
sja-app/src/: lib.rs
sja-backend/: Cargo.toml  README.md
sja-backend/migrations/: 20240727_init.sql
sja-backend/src/: main.rs
sja-backend/src/database/: structs.rs
sja-backend/src/server/: middle_ware.rs  mod.rs  router.rs
sja-backend/tests/: database.rs
sja-frontend/: Cargo.toml  package-lock.json
sja-frontend/src/: lib.rs
sja-frontend/src/components/: CustomTable.js
src/: app.rs  lib.rs  main.rs  router.rs  structs.rs
src/components/: mod.rs  page.rs
src/database/: services.rs  structs.rs
src/pages/: home.rs
src/server/: middle_ware.rs  router.rs
tests/: database.rs
