[package]
name = "sja"
authors = ["Weiberle17"]
version = "0.1.0"
description = "Backend for SJA webapp"
edition = "2021"
rust-version = "1.74"
license = "MIT"

[dependencies]
anyhow = "1.0.86"
axum = "0.7.5"
chrono = { version = "0.4.38", features = [ "serde" ] }
dotenvy = "0.15.7"
serde = { version = "1.0.204", features = [ "derive" ] }
sqlx = { version = "0.8.0", features = [ "postgres", "runtime-tokio", "uuid", "chrono", "json" ] }
tokio = { version = "1.39.2", features = [ "full" ] }
uuid = { version = "1.10.0", features = [ "serde", "v4" ] }

[profile.dev.package.sqlx-macros]
opt-level = 3

[features]
default = []
database = []
