[package]
name = "sja-backend"
authors = ["Weiberle17"]
version = "0.1.0-alpha"
description = "Backend for SJA webapp"
edition = "2021"
rust-version = "1.74"
license = "MIT"

[dependencies]
sja-app = { path = "../sja-app", default-features = false, features = [ "ssr" ] }
leptos = { workspace = true, features = [ "ssr" ] }
leptos_axum.workspace = true

anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
dotenvy.workspace = true
serde.workspace = true
simple_logger.workspace = true
sqlx.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
uuid.workspace = true
log.workspace = true

[profile.dev.package.sqlx-macros]
opt-level = 3

[features]
default = []
database = []
